Live snap always.

--- a/playground/index.html
+++ b/playground/index.html
@@ -29,7 +29,7 @@
 						<label><input type="checkbox" name="snap" id="snap" value="1" /> Snap end position to grid</label>
 					</li>
 					<li>
-						<label><input type="checkbox" name="liveSnap" id="liveSnap" value="1" /> Live snap</label>
+						<label><input type="checkbox" name="liveSnap" id="liveSnap" value="1" checked/> Live snap</label>
 					</li>
 				</ul>
 			</div>
