Having issues adding new draggables after moving old ones.

--- a/playground/index.html
+++ b/playground/index.html
@@ -25,11 +25,13 @@
 </head>
 <body>
 	<div class="container">
-	<h1>Stories</h1>
+	<label for="basic-url">Story</label> 
+	<input type="text" class="form-control" placeholder="Write in your Story (Press Enter)" id="input-story">
 	<div id="row-research">
 		<div id="new-task">
+			<label for="basic-url2">Tasks</label>
 	    	<div class="input-group">
-	      		<input type="text" class="form-control" placeholder="Write in your Story (Press Enter)">
+	      		<input type="text" class="form-control" placeholder="Write in your tasks here (Press Enter)">
 	      		<span class="input-group-btn">
 	        		<button class="btn btn-success" type="button">+</button>
 	      		</span>
