--- a/fidelity/index.html
+++ b/fidelity/index.html
@@ -3,6 +3,7 @@
     <link href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    
 
     <!-- Add Font Awesome -->
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
@@ -13,7 +14,7 @@
 	<div class="container">
 		<h1>Stories</h1>
 		<div id="row-research" class="row">
-			<div id="new-story" class="col-xs-12">
+			<div id="new-story" class="col-xs-10">
 		    	<div class="input-group">
 		      		<input type="text" class="form-control" placeholder="Write in your Story (Press Enter)">
 		      		<span class="input-group-btn">
@@ -21,6 +22,9 @@
 		      		</span>
 		    	</div><!-- /input-group -->
 		  	</div><!-- /.col-lg-6 -->
+		  	<div class="col-xs-2">
+		  		<button type="button" class="btn btn-primary" id="done"> I'm Done. Make my chart. </button>
+		  	</div>
 		</div>
 		
 	</div>
