--- a/fidelity/index.html
+++ b/fidelity/index.html
@@ -26,6 +26,9 @@
 		  		<button type="button" class="btn btn-primary" id="done"> I'm Done. Make my chart. </button>
 		  	</div>
 		</div>
+		<div id="stories-col" class="col-xs-6">
+
+		</div>
 		
 	</div>
 	<!-- <div id="container" style="height:400px;width:50%;"></div> -->
