--- a/fidelity/index.html
+++ b/fidelity/index.html
@@ -26,8 +26,9 @@
 		  		<button type="button" class="btn btn-primary" id="done"> I'm Done. Make my chart. </button>
 		  	</div>
 		</div>
-		<div id="stories-col" class="col-xs-6">
-
+		<div id="stories-col" class="col-xs-6"></div>
+		<div id="chart-col" class="col-xs-6">
+			<div id="chart"></div>
 		</div>
 		
 	</div>
