Started working with checkboxes

--- a/fidelity/index.html
+++ b/fidelity/index.html
@@ -28,7 +28,12 @@
 		</div>
 		<div id="stories-col" class="col-xs-6"></div>
 		<div id="chart-col" class="col-xs-6">
-			<div id="chart"></div>
+			<div class="row">
+				<div class="fixed">
+					<div id="chart"></div>
+					<div id="plan"></div>
+				</div>
+			</div>
 		</div>
 		
 	</div>
