--- a/dtr-bars/index.html
+++ b/dtr-bars/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
 
     <link rel="stylesheet" type="text/css" href="main.css">
+    <title>DTR Bars</title>
 </head>
 <body>
 	<div class="container">
@@ -19,16 +20,15 @@
 		      		<span class="input-group-btn">
 		        		<button class="btn btn-success" type="button">+</button>
 		      		</span>
-		    	</div><!-- /input-group -->
-		  	</div><!-- /.col-lg-6 -->
+		    	</div>
+		  	</div>
 		</div>
 		
 	</div>
-	<!-- <div id="container" style="height:400px;width:50%;"></div> -->
-	<!-- <div id="drag"></div>
-	<div id="drop"></div>  -->
 </body>
+<!-- Used Highcharts for DTR Bars -->
 <script src="http://code.highcharts.com/highcharts.js"></script>
 <script src="http://code.highcharts.com/highcharts-more.js"></script>
+<!-- This is for when it was draggable -->
 <script src="https://rawgithub.com/highslide-software/draggable-points/master/draggable-points.js"></script>
 <script src="dtr-bars.js"></script>
