--- a/fidelity/index.html
+++ b/fidelity/index.html
@@ -20,13 +20,16 @@
 		      		<span class="input-group-btn">
 		        		<button class="btn btn-success" type="button">+</button>
 		      		</span>
-		    	</div><!-- /input-group -->
-		  	</div><!-- /.col-lg-6 -->
+		    	</div>
+		  	</div>
+		  	<!-- Button to make the chart -->
 		  	<div class="col-xs-2">
 		  		<button type="button" class="btn btn-primary" id="done"> I'm Done. Make my chart. </button>
 		  	</div>
 		</div>
+		<!-- Story column for the different stories -->
 		<div id="stories-col" class="col-xs-6"></div>
+		<!-- Chart column for the evaluation chart that is fixed-->
 		<div id="chart-col" class="col-xs-6">
 			<div class="row">
 				<div class="fixed">
@@ -37,11 +40,10 @@
 		</div>
 		
 	</div>
-	<!-- <div id="container" style="height:400px;width:50%;"></div> -->
-	<!-- <div id="drag"></div>
-	<div id="drop"></div>  -->
 </body>
+<!-- Highcharts library and more highcharts for bubbles -->
 <script src="http://code.highcharts.com/highcharts.js"></script>
 <script src="http://code.highcharts.com/highcharts-more.js"></script>
+<!-- Draggable to drab the bubbles around -->
 <script src="https://rawgithub.com/highslide-software/draggable-points/master/draggable-points.js"></script>
 <script src="fidelity.js"></script>
