Comments for jars.

--- a/jars/index.html
+++ b/jars/index.html
@@ -19,16 +19,15 @@
 		      		<span class="input-group-btn">
 		        		<button class="btn btn-success" type="button">+</button>
 		      		</span>
-		    	</div><!-- /input-group -->
-		  	</div><!-- /.col-lg-6 -->
+		    	</div>
+		  	</div>
 		</div>
 		
 	</div>
-	<!-- <div id="container" style="height:400px;width:50%;"></div> -->
-	<!-- <div id="drag"></div>
-	<div id="drop"></div>  -->
 </body>
+<!-- Highcharts and Highcharts more for bubbles -->
 <script src="http://code.highcharts.com/highcharts.js"></script>
 <script src="http://code.highcharts.com/highcharts-more.js"></script>
+<!-- Draggable to drag the bubbles -->
 <script src="https://rawgithub.com/highslide-software/draggable-points/master/draggable-points.js"></script>
 <script src="jars.js"></script>
