--- a/playground/index.html
+++ b/playground/index.html
@@ -24,6 +24,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Signika+Negative:300,400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
+	<!-- Input UI -->
 	<div class="container">
 		<div class="col-xs-12"> 
 			<label for="basic-url">Story</label> 
@@ -43,9 +44,9 @@
 	</div>
 	<!-- Grid -->
 	<div id="container">
-			<!-- <div class="box" id="box1">Drag and throw me</div>
-			<div class="box" id="box2" style="left:392px; background-color:red;">Drag and throw me too</div> -->
+			
 	</div>
+	<!-- Controls are hidden from user -->
 	<div class="controls">
 		<ul>
 			<li class="controlsTitle">Options</li>
