Added comments for radar chart.

--- a/spiderweb/index.html
+++ b/spiderweb/index.html
@@ -37,6 +37,7 @@
       <div class="row">
         <div class="col-md-6 col-lg-6 z-depth-2 graphArea valign-wrapper">
           <p class="valign center-align" id="message">Add a few claims to begin planning!</p>
+          <!-- Radar chart -->
           <div id="chart"></div>
         </div>
         <div class="col-md-6 col-lg-6 user-input">
@@ -46,6 +47,7 @@
                 <button class="btn addClaim" type="button" ng-click="addClaim()">+</button>
               </span>
           </div>
+          <!-- Claims -->
           <div class="claims-header z-depth-1">
             <div class="content">
               <h4>Claims</h4>
