--- a/tree/tree.html
+++ b/tree/tree.html
@@ -40,19 +40,27 @@ path.link {
 </head>
   <body>
     <div id="body">
-      <div id="footer">
-        d3.layout.tree
-        <div class="hint">click or option-click to expand or collapse</div>
-      </div>
+    </div>
+    <div class="row">
+      <div id="new-question" class="col-xs-offset-2 col-xs-9">
+          <h3 id="current-node">None selected (please enter one)</h3>
+          <div class="input-group">
+              <input type="text" class="form-control" placeholder="Write in your node(Press Enter)">
+              <span class="input-group-btn">
+                <button class="btn btn-success" type="button">+</button>
+              </span>
+          </div>
+        </div>
     </div>
 
 <script type="text/javascript">
 
 var m = [20, 120, 20, 120],
     w = 1280 - m[1] - m[3],
-    h = 800 - m[0] - m[2],
+    h = 700 - m[0] - m[2],
     i = 0,
-    root;
+    root; 
+    this.current_node = null;
 
 var tree = d3.layout.tree()
     .size([h, w]);
@@ -66,7 +74,7 @@ var vis = d3.select("#body").append("svg:svg")
   .append("svg:g")
     .attr("transform", "translate(" + m[3] + "," + m[0] + ")");
 
-d3.json("flare.json", function(json) {
+d3.json("research_tree.json", function(json) {
   root = json;
   root.x0 = h / 2;
   root.y0 = 0;
@@ -80,10 +88,10 @@ d3.json("flare.json", function(json) {
 
   // Initialize the display to show a few nodes.
   root.children.forEach(toggleAll);
-  toggle(root.children[1]);
-  toggle(root.children[1].children[2]);
-  toggle(root.children[9]);
-  toggle(root.children[9].children[0]);
+  // toggle(root.children[1]);
+  // toggle(root.children[1].children[2]);
+  // toggle(root.children[9]);
+  // toggle(root.children[9].children[0]);
 
   update(root);
 });
@@ -105,7 +113,13 @@ function update(source) {
   var nodeEnter = node.enter().append("svg:g")
       .attr("class", "node")
       .attr("transform", function(d) { return "translate(" + source.y0 + "," + source.x0 + ")"; })
-      .on("click", function(d) { toggle(d); update(d); });
+      .on("click", function(d) { 
+        toggle(d); 
+        update(d); 
+        current_node = d;
+        console.log(current_node);
+        $('#current-node').text('Current node: ' + d.name + ' (' + d.depth + ')');
+      });
 
   nodeEnter.append("svg:circle")
       .attr("r", 1e-6)
@@ -115,7 +129,9 @@ function update(source) {
       .attr("x", function(d) { return d.children || d._children ? -10 : 10; })
       .attr("dy", ".35em")
       .attr("text-anchor", function(d) { return d.children || d._children ? "end" : "start"; })
-      .text(function(d) { return d.name; })
+      .text(function(d) { 
+        return d.depth + '.' + d.name; 
+      })
       .style("fill-opacity", 1e-6);
 
   // Transition nodes to their new position.
@@ -188,6 +204,39 @@ function toggle(d) {
     d._children = null;
   }
 }
+function add_node(){
+  var new_question = $('#new-question input');
+   //Checks if there is something in the input field
+  if(new_question.val()){ //Make sure there is an input
+    if (current_node == null){
+      console.log('here');
+      // this.current_node = ;
+    } else {
+      var temp = {
+        name:new_question.val(), 
+        children:[],
+        _children:[],
+        depth:(current_node.depth + 1),
+        parent:current_node
+      };
+      if(current_node.children == null){
+        current_node.children = [temp];
+      } else {
+        current_node.children.push(temp);  
+      }
+      update(root);
+    }
+  }
+}
+
+// Bind the buttons
+$("#new-question input").keypress(function(event) { //Allows submission when pressing enter
+    if (event.which == 13) {
+        event.preventDefault();
+        add_node();
+    }
+});
+$('#new-question button').click(add_node);
 
     </script>
   </body>
