added a depth legend.

--- a/tree/tree.html
+++ b/tree/tree.html
@@ -41,15 +41,19 @@ path.link {
   <body>
     <div id="body">
     </div>
-    <div class="row">
-      <div id="new-question" class="col-xs-offset-2 col-xs-9">
-          <h3 id="current-node">None selected (please enter one)</h3>
-          <div class="input-group">
-              <input type="text" class="form-control" placeholder="Write in your node(Press Enter)">
-              <span class="input-group-btn">
-                <button class="btn btn-success" type="button">+</button>
-              </span>
-          </div>
+    <div class="col-xs-2">
+      1-Research Question <br />
+      2-Research Claim <br />
+      3-Design Argument <br />
+      4-Story <br />
+    </div>
+    <div id="new-question" class="col-xs-9">
+        <h3 id="current-node">None selected (please click a node)</h3>
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Write in your node(Press Enter)">
+          <span class="input-group-btn">
+            <button class="btn btn-success" type="button">+</button>
+          </span>
         </div>
     </div>
 
